   FastqFileBuilder objects have changed to return this new interface.

Bug Fixes
----------
1. Generate 454 Universal Accession number did not
   generate valid id if the location x,y coordinate was very small.

================
Jillion 4.2
================

New Features
------------

1.  Renamed *FastaRecordWriter* to *FastaWriter* to make smaller class names

2.  AminoAcid - Added Pyrrolysine 'O' to AminoAcid class and AminoAcidSequence
    as well as Blosum matrices. 
    
3.  FastaFileParser - now supports non-redundant fasta files (parsing only)

Bug Fixes
----------

1.  AlnFileParser - added lowercase basecall support which is used in MAFFT output.
                    Jillion can now successfully parse .aln files produced by MAFFT.
    
2.  XMLBlastParser - If accession in subject is "No definition line found" will
                     use subjectDefline instead.
                     
3.  PrimerDetector - Added guard clause if input sequence is empty, 
                     then empty collection of hits is returned.
                    
API Changes
-----------

1.  Blast- BlastHit now has subjectDefline field instead of
           subjectDeflineComment which only used to have the comment.
           
2.  BtabWriter - now puts alignment length in previously skipped column

================
Jillion 4.1 - internal release only
================

New Features
------------

1.  Added support for AminoAcid ambiguity codes in AminoAcid class AminoAcidSequence
    as well as Blosum matrices. 
    
2.  Added support for Amino Acid 'U' Selenocystenine.

API Changes
-----------

1.  removed getNucleotideSequenceBuilder from AssembledReadBuilder since we want
    to control all sequence manipulations directly to keep read ranges in sync.
    
2.  Added method CoverageRegion.getLength() to avoid having to chain region.asRange().getLength()
 
3.  Moved Frame class to residue package.

4.  Added new class NucleotideSequencePermuter

5.  Improved Javadoc

Bug Fixes
---------